--- a/src/App/Controller/Window.fxml
+++ b/src/App/Controller/Window.fxml
@@ -57,6 +57,8 @@
             <Button layoutX="526.0" layoutY="197.0" mnemonicParsing="false" onAction="#prewittYFilter" text="Prewitt Hy" />
             <Button layoutX="42.0" layoutY="253.0" mnemonicParsing="false" onAction="#sobelXFilter" text="Sobel Hx" />
             <Button layoutX="148.0" layoutY="253.0" mnemonicParsing="false" onAction="#sobelYFilter" text="Sobel Hy" />
+             <Button layoutX="148.0" layoutY="253.0" mnemonicParsing="false" onAction="#rotateLeft" text="Rotate Left" />
+             <Button layoutX="259.0" layoutY="253.0" mnemonicParsing="false" onAction="#rotateRight" text="Rotate Right" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="716.0" prefWidth="743.0">
          <children>
